[package]
name = "ui"
version = "0.1.0"
authors = ["Michael Zhang <failed.down@gmail.com>"]

[features]
default = ["sfc"]
sfc = ["haml", "quick-xml"]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dependencies]
failure = "0.1"

quick-xml = { version = "0.12", optional = true }
haml = { version = "0.4", optional = true }
